.provarCaches/00D5f000005vwGkEAI/objects/rstk__fieldlabels__c.object
<CustomObject>
    <description>fieldlabels__c</description>
    <fields>
        <fullName>rstk__sopickh_enhancedcustinfoinhdr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Enhanced Customer Info in Header</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_printcustprodnameanddesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Customer Product Name and Desc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_printitemdescription__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Item Description</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_printsolineexternalnotes__c</fullName>
        <label>Print SO Line External Notes</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_printsolineinternalnotes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print SO Line Internal Notes</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_showpreselectedlocsonly__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Show Pre-Selected Locations Only</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Field Labels</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>